# pyomo-simple-examples

./: .gitignore  README.md  pyproject.toml
pyomo_simple_examples/: 01_simple_lp.ipynb  02_simple_milp.ipynb  03_simple_nlp.ipynb
